--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.479.0",
     "next": "15.1.6",
     "react": "^19.0.0",
