--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tailwindcss/typography": "^0.5.16",
+    "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "jwt-decode": "^4.0.0",
@@ -25,6 +26,7 @@
     "next": "15.1.6",
     "react": "^19.0.0",
     "react-big-calendar": "^1.19.4",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
